Updated website content

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               </div>
               <div role="listitem" title="GitHub">
                 <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 .5C5.73.5.9 5.33.9 11.6c0 4.88 3.17 9.02 7.56 10.48.55.1.76-.23.76-.52 0-.26-.01-1.12-.02-2.03-3.07.67-3.72-1.31-3.72-1.31-.5-1.26-1.21-1.6-1.21-1.6-.99-.67.08-.66.08-.66 1.1.08 1.68 1.13 1.68 1.13.98 1.68 2.57 1.2 3.2.92.1-.71.38-1.2.69-1.48-2.45-.28-5.02-1.22-5.02-5.44 0-1.2.43-2.18 1.13-2.95-.11-.28-.49-1.41.11-2.94 0 0 .93-.3 3.05 1.13.88-.25 1.82-.38 2.76-.38s1.88.13 2.76.38c2.13-1.43 3.06-1.13 3.06-1.13.6 1.53.22 2.66.11 2.94.7.77 1.13 1.75 1.13 2.95 0 4.23-2.58 5.16-5.04 5.44.39.33.74.98.74 1.98 0 1.43-.01 2.58-.01 2.93 0 .29.2.63.77.52 4.37-1.47 7.55-5.61 7.55-10.48C23.1 5.33 18.27.5 12 .5z"/></svg>
-                <a href="#" target="_blank" rel="noopener">GitHub</a>
+                <a href="https://github.com/kowshal97" target="_blank" rel="noopener">GitHub</a>
               </div>
             </div>
           </div>
