Added Marvel Selenium E2E project to portfolio

--- a/index.html
+++ b/index.html
@@ -367,6 +367,25 @@
               <li>Structured fixtures and markers to scale tests across endpoints.</li>
             </ul>
           </div>
+		  <div class="card">
+			  <h3>Marvel Comics E2E UI Tests
+				<a href="https://github.com/kowshal97/Selenium-Marvel-E2E-Testing" target="_blank" rel="noopener" style="font-size:.9rem; margin-left:.5rem">GitHub ↗</a>
+			  </h3>
+			  <p class="meta">Selenium WebDriver (Python) • Page Object Model • PyTest • WebDriverWait • Reporting</p>
+			  <ul class="list">
+				<li>Automated end-to-end flows on <code>marvel.com/comics</code> (search, filters, navigation, detail views).</li>
+				<li>Stable locators with explicit waits; reusable Page Object Model for maintainability.</li>
+				<li>PyTest fixtures, parametrized tests, and clean console/HTML reports for CI readiness.</li>
+			  </ul>
+			  <div style="margin-top:10px; display:flex; gap:.5rem; flex-wrap:wrap;">
+				<a class="btn" href="https://github.com/kowshal97/Selenium-Marvel-E2E-Testing" target="_blank" rel="noopener">View Repository</a>
+				<!-- Optional: if you have a report artifact in the repo, link it here -->
+				<!-- <a class="btn secondary" href="LINK-TO-HTML-REPORT" target="_blank" rel="noopener">View Test Report</a> -->
+				<!-- Optional: link to README quickstart -->
+				<a class="btn secondary" href="https://github.com/kowshal97/Selenium-Marvel-E2E-Testing#readme" target="_blank" rel="noopener">Quickstart</a>
+			  </div>
+			</div>
+
         </div>
       </div>
     </section>
